Added disclaimer to footer

--- a/translations/client-admin/public/locales/fi/client-admin.json
+++ b/translations/client-admin/public/locales/fi/client-admin.json
@@ -15,11 +15,12 @@
   "footer": {
     "title": "Polis",
     "desc": "DigiFinland ja Sitra ovat tuoneet Suomeen avoimeen lähdekoodiin perustuvan Polis-verkkoalustan. Poliksen tarkoituksena on mahdollistaa suurien ryhmien osallistuminen rakentavaan mielipiteiden vaihtoon, valitun aihepiirin ympärillä.",
+    "disclaimer": "Polis-verkkoalusta on kokeiluvaiheessa ja se ei vielä täytä kaikkia vaatimuksia saavutettavuuden ja käytettävyyden osalta.",
     "version": "Versio: {{param1}}",
     "released": "Julkaisu pvm: {{param1}}",
     "provider": "Palveluntuottaja",
     "links": {
-      "privacy": "Tietosuojaseloste",
+      "privacy": "DigiFinland Oy tietosuoja",
       "info": "Tietoa palvelusta",
       "source": "Lähdekoodi"
     }
