--- a/translations/client-report/locales/en/client-report.json
+++ b/translations/client-report/locales/en/client-report.json
@@ -11,7 +11,7 @@
   "footer": {
     "title": "Polis",
     "desc": "DigiFinland and Sitra have introduced the Polis online platform in Finland, based on open source code. The purpose of Polis is to enable large groups to participate in constructive exchanges of opinions around selected topics.",
-    "disclaimer": "Polis-platform is in the experimental phase and does not yet meet all the requirements in terms of accessibility and usability.",
+    "disclaimer": "",
     "version": "Version: {{param1}}",
     "released": "Release date: {{param1}}",
     "provider": "Service provider",
