--- a/translations/client-report/locales/fi/client-report.json
+++ b/translations/client-report/locales/fi/client-report.json
@@ -11,7 +11,7 @@
   "footer": {
     "title": "Polis",
     "desc": "DigiFinland ja Sitra ovat tuoneet Suomeen avoimeen lähdekoodiin perustuvan Polis-verkkoalustan. Poliksen tarkoituksena on mahdollistaa suurien ryhmien osallistuminen rakentavaan mielipiteiden vaihtoon, valitun aihepiirin ympärillä.",
-    "disclaimer": "Polis-verkkoalusta on jatkokehitysvaiheessa ja se ei vielä täytä kaikkia vaatimuksia saavutettavuuden ja käytettävyyden osalta.",
+    "disclaimer": "",
     "version": "Versio: {{param1}}",
     "released": "Julkaisu pvm: {{param1}}",
     "provider": "Palveluntuottaja",
