Added link to accessibility statement

--- a/translations/client-admin/public/locales/sv/client-admin.json
+++ b/translations/client-admin/public/locales/sv/client-admin.json
@@ -22,6 +22,7 @@
     "links": {
       "privacy": "DigiFinland Oy dataskydd",
       "info": "Information",
+      "accessibility": "Tillgänglighetsutlåtande",
       "source": "Källkod"
     }
   },
