--- a/translations/client-report/locales/en/client-report.json
+++ b/translations/client-report/locales/en/client-report.json
@@ -18,6 +18,7 @@
     "links": {
       "privacy": "DigiFinland Oy data protection",
       "info": "Information",
+      "accessibility": "Accessibility statement",
       "source": "Sourcecode"
     }
   },
