--- a/translations/client-report/locales/fi/client-report.json
+++ b/translations/client-report/locales/fi/client-report.json
@@ -18,6 +18,7 @@
     "links": {
       "privacy": "DigiFinland Oy tietosuoja",
       "info": "Tietoa palvelusta",
+      "accessibility": "Saavutettavuusseloste",
       "source": "Lähdekoodi"
     }
   },
