--- a/translations/client-report/locales/sv/client-report.json
+++ b/translations/client-report/locales/sv/client-report.json
@@ -18,6 +18,7 @@
     "links": {
       "privacy": "DigiFinland Oy dataskydd",
       "info": "Information",
+      "accessibility": "Tillgänglighetsutlåtande",
       "source": "Källkod"
     }
   },
