--- a/translations/client-admin/public/locales/en/client-admin.json
+++ b/translations/client-admin/public/locales/en/client-admin.json
@@ -22,6 +22,7 @@
     "links": {
       "privacy": "DigiFinland Oy data protection",
       "info": "Information",
+      "accessibility": "Accessibility statement",
       "source": "Sourcecode"
     }
   },
