--- a/translations/client-admin/public/locales/fi/client-admin.json
+++ b/translations/client-admin/public/locales/fi/client-admin.json
@@ -22,6 +22,7 @@
     "links": {
       "privacy": "DigiFinland Oy tietosuoja",
       "info": "Tietoa palvelusta",
+      "accessibility": "Saavutettavuusseloste",
       "source": "Lähdekoodi"
     }
   },
